# aoc2024

./: .gitignore  __about__.py  pyproject.toml
aoc2024/: aoc1.py  aoc10.py  aoc11.py  aoc12.py  aoc13.py  aoc14.py  aoc15.py  aoc16.py  aoc17.py  aoc18.py  aoc19.py  aoc2.py  aoc3.py  aoc4.py  aoc5.py  aoc6.py  aoc7.py  aoc8.py  aoc9.py  get_input.py  main.py
tests/: test_aoc2024.py
